--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "gray-matter": "^4.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
@@ -56,7 +57,10 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-resizable-panels": "^3.0.6",
+    "reading-time": "^1.5.0",
     "recharts": "^2.15.4",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
