--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "recharts": "^2.15.4",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "resend": "^6.1.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
